apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gitops-service
spec:
  type: ClusterIP
  selector:
    app: nginx-gitops
  ports:
  - port: 80
    targetPort: 80
